# assistant

./: .drone.yml  .gitignore  Dockerfile  Jenkinsfile.groovy  README.md  fabfile.py  pyproject.toml  readme.md  requirements.txt
ansible/: config.example.yml  config.yml  docker-compose.yml  hosts.ini  playbook.yml
configs/sample/: docker-compose.yml
src/: main.py
src/assistant/: core.py  cron.py  telegram.py  utils.py
src/assistant/stats/instapaper/: crawler.py  export_2017.json  notebook.ipynb
src/assistant/tests/: test_assistant.py  test_core.py  test_utils.py
