[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
aiotg = "^1.0"
aiocron = "^1.3"
aiohttp_socks = "^0.2.2"

parsel = "^1.5"
transmissionrpc = "^0.11.0"
python-dateutil = "^2.8"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
